# simple-notes

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: Details.h  main.cpp
src/backend/: Error.h  ErrorCode.h  FirebaseApp.cpp  FirebaseApp.h  IStatusHandler.h  IdGenerator.cpp  IdGenerator.h  Note.cpp  Note.h  StatusHandler.h
src/backend/provider/: AuthProvider.cpp  AuthProvider.h  DatabaseProvider.cpp  DatabaseProvider.h  NoteProvider.cpp  NoteProvider.h
src/ui/: AboutDialog.cpp  AboutDialog.h  App.cpp  App.h  AuthDialog.cpp  AuthDialog.h  ErrorBox.cpp  ErrorBox.h  HelpDialog.cpp  HelpDialog.h  MainWindow.cpp  MainWindow.h  NoteEditorDialog.cpp  NoteEditorDialog.h  NoteWidget.cpp  NoteWidget.h
src/ui/resources/: resources.qrc
src/ui/resources/styles/: NoteWidget.qss
